--- a/package.json
+++ b/package.json
@@ -23,20 +23,20 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^1.16.0",
-    "@builder.io/qwik-city": "^1.16.0",
     "@eslint/js": "latest",
     "@types/node": "20.19.0",
     "eslint": "9.32.0",
-    "eslint-plugin-qwik": "^1.16.0",
+    "eslint-plugin-qwik": "2.0.0-beta.9",
     "globals": "16.3.0",
     "prettier": "3.6.2",
     "typescript": "5.4.5",
     "typescript-eslint": "8.38.0",
     "typescript-plugin-css-modules": "latest",
-    "undici": "*",
+    "undici": "^7.16.0",
     "vite": "7.1.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "vite-tsconfig-paths": "^4.3.2",
+    "@qwik.dev/router": "2.0.0-beta.9",
+    "@qwik.dev/core": "2.0.0-beta.9"
   },
   "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b"
 }
