--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "vite build -c adapters/vercel-edge/vite.config.mts",
     "build.types": "tsc --incremental --noEmit",
-    "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
+    "deploy": "vercel deploy",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
@@ -24,6 +25,8 @@
   },
   "devDependencies": {
     "@eslint/js": "latest",
+    "@qwik.dev/core": "2.0.0-beta.9",
+    "@qwik.dev/router": "2.0.0-beta.9",
     "@types/node": "20.19.0",
     "eslint": "9.32.0",
     "eslint-plugin-qwik": "2.0.0-beta.9",
@@ -33,10 +36,9 @@
     "typescript-eslint": "8.38.0",
     "typescript-plugin-css-modules": "latest",
     "undici": "^7.16.0",
+    "vercel": "^29.1.1",
     "vite": "7.1.0",
-    "vite-tsconfig-paths": "^4.3.2",
-    "@qwik.dev/router": "2.0.0-beta.9",
-    "@qwik.dev/core": "2.0.0-beta.9"
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b"
 }
