chore: add nextjs replica

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,5 +1,12 @@
+packages:
+  - .
+  - apps/*
+  - packages/*
+  - server
+  - adapters/*
+
 onlyBuiltDependencies:
-  - '@parcel/watcher'
+  - "@parcel/watcher"
   - deasync
   - esbuild
   - sharp
