--- a/package.json
+++ b/package.json
@@ -1,44 +1,11 @@
 {
-  "name": "my-qwik-basic-starter",
-  "description": "Demo app with sample routes",
-  "engines": {
-    "node": "^18.17.0 || ^20.3.0 || >=21.0.0"
-  },
-  "engines-annotation": "Mostly required by sharp which needs a Node-API v9 compatible runtime",
+  "name": "qwik-click-race-benchmark-monorepo",
   "private": true,
-  "type": "module",
+  "packageManager": "pnpm@10.15.0",
   "scripts": {
-    "build": "qwik build",
-    "build.client": "vite build",
-    "build.preview": "vite build --ssr src/entry.preview.tsx",
-    "build.server": "vite build -c adapters/vercel-edge/vite.config.mts",
-    "build.types": "tsc --incremental --noEmit",
-    "deploy": "vercel deploy",
-    "dev": "vite --mode ssr",
-    "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
-    "fmt": "prettier --write .",
-    "fmt.check": "prettier --check .",
-    "lint": "eslint \"src/**/*.ts*\"",
-    "preview": "qwik build preview && vite preview --open",
-    "start": "vite --open --mode ssr",
-    "qwik": "qwik"
-  },
-  "devDependencies": {
-    "@eslint/js": "latest",
-    "@qwik.dev/core": "2.0.0-beta.9",
-    "@qwik.dev/router": "2.0.0-beta.9",
-    "@types/node": "20.19.0",
-    "eslint": "9.32.0",
-    "eslint-plugin-qwik": "2.0.0-beta.9",
-    "globals": "16.3.0",
-    "prettier": "3.6.2",
-    "typescript": "5.4.5",
-    "typescript-eslint": "8.38.0",
-    "typescript-plugin-css-modules": "latest",
-    "undici": "^7.16.0",
-    "vercel": "^29.1.1",
-    "vite": "7.1.0",
-    "vite-tsconfig-paths": "^4.3.2"
-  },
-  "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b"
+    "dev:qwik": "pnpm --filter ./apps/qwik dev",
+    "build:qwik": "pnpm --filter ./apps/qwik build && pnpm --filter ./apps/qwik build.server",
+    "dev:next": "pnpm --filter ./apps/nextjs dev",
+    "build:next": "pnpm --filter ./apps/nextjs build"
+  }
 }
