chore: add shadcn and qwik-ui

--- a/apps/qwik/package.json
+++ b/apps/qwik/package.json
@@ -25,13 +25,24 @@
   },
   "devDependencies": {
     "@eslint/js": "latest",
+    "@qwik-ui/headless": "^0.7.3",
+    "@qwik-ui/styled": "^0.4.0",
+    "@qwik-ui/utils": "^0.3.2",
     "@qwik.dev/core": "2.0.0-beta.9",
     "@qwik.dev/router": "2.0.0-beta.9",
+    "@qwikest/icons": "^0.0.13",
+    "@tailwindcss/vite": "^4.1.4",
     "@types/node": "20.19.0",
+    "class-variance-authority": "0.7.1",
     "eslint": "9.32.0",
     "eslint-plugin-qwik": "2.0.0-beta.9",
     "globals": "16.3.0",
+    "nx": "^21.5.3",
     "prettier": "3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "qwik-ui": "^0.4.0",
+    "tailwindcss": "^4.1.4",
+    "tw-animate-css": "1.3.4",
     "typescript": "5.4.5",
     "typescript-eslint": "8.38.0",
     "typescript-plugin-css-modules": "latest",
@@ -40,5 +51,6 @@
     "vite": "7.1.0",
     "vite-tsconfig-paths": "^4.3.2"
   },
-  "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b"
+  "packageManager": "pnpm@10.15.0",
+  "nx": {}
 }
